[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = "0.12.0"
#differential-dataflow = "0.12.0"
differential-dataflow = { path = "../../TimelyDataflow/differential-dataflow2" }
#differential-dataflow = { git = "https://github.com/DataSystemsGroupUT/differential-dataflow.git", rev="3e0d68664633f87a38c8385744ff0ef618ef35ae" }
criterion = "0.3.4"
lasso = "0.6.0"
dogsdogsdogs = { path = "../../TimelyDataflow/differential-dataflow2/dogsdogsdogs" }
#dogsdogsdogs = { git = "https://github.com/DataSystemsGroupUT/differential-dataflow.git", rev="3e0d68664633f87a38c8385744ff0ef618ef35ae" }
clap = "3.0.0-beta.4"
linecount = "0.1.0"
ddshow-sink = { path = "../../Kixiron/timely-viz/crates/ddshow-sink" }
aoc_driver = "0.1.4"
